--- a/app.json
+++ b/app.json
@@ -1,7 +1,6 @@
 {
   "pages":[
     "pages/index/index",
-    "pages/logs/logs",
     "pages/home/home",
     "pages/popular/popular",
     "pages/coming/coming",
@@ -9,10 +8,11 @@
     "pages/search/search",
     "pages/filmDetail/filmDetail",
     "pages/personDetail/personDetail",
-    "pages/searchResult/searchResult"
+    "pages/searchResult/searchResult",
+    "pages/logs/logs"
   ],
   "window":{
-    "navigationBarBackgroundColor": "#47a86c",
+    "navigationBarBackgroundColor": "#ee5500",
     "navigationBarTextStyle": "white",
     "navigationBarTitleText":  "Test",
     "backgroundColor": "#fff",
@@ -20,30 +20,19 @@
   },
   "tabBar": {
     "color": "#686868",
-    "selectedColor": "#47a86c",
+    "selectedColor": "#ee5500",
     "backgroundColor": "#ffffff",
     "borderStyle": "white",
     "list": [{
-      "pagePath": "pages/home/home",
-      "iconPath": "dist/images/popular_icon.png",
-      "selectedIconPath": "dist/images/popular_active_icon.png",
-      "text": "热映"
+      "pagePath": "pages/index/index",
+      "iconPath": "dist/images/fa.png",
+      "selectedIconPath": "dist/images/faSelect.png",
+      "text": "首页"
     }, {
-      "pagePath": "pages/coming/coming",
-      "iconPath": "dist/images/coming_icon.png",
-      "selectedIconPath": "dist/images/coming_active_icon.png",
-      "text": "待映"
-    },{
-      "pagePath": "pages/search/search",
-      "iconPath": "dist/images/search_icon.png",
-      "selectedIconPath": "dist/images/search_active_icon.png",
-      "text": "搜索"
-    },
-    {
-      "pagePath": "pages/top/top",
-      "iconPath": "dist/images/top_icon.png",
-      "selectedIconPath": "dist/images/top_active_icon.png",
-      "text": "口碑"
+      "pagePath": "pages/home/home",
+      "iconPath": "dist/images/mine.png",
+      "selectedIconPath": "dist/images/mineSelect.png",
+      "text": "锤啊"
     }]
   },
   "networkTimeout": {
